--- a/d3-table-cards.css
+++ b/d3-table-cards.css
@@ -52,31 +52,49 @@ h1{
 	font-weight: bold;
 }
 
+
+/* gemstones */
 .chakra1{
-	border-left: solid 5px #f44336;
-	background-color: #ffebee;
+	border-left: solid 7px #f44336;
 }
 .chakra2{
-	border-left: solid 5px #ff9800;
-	background-color: #fff3e0;
+	border-left: solid 7px #ff9800;
 }
 .chakra3{
-	border-left: solid 5px #ffc107;
-	background-color: #fff8e1;
+	border-left: solid 7px #ffc107;
 }
 .chakra4{
-	border-left: solid 5px #4caf50;
-	background-color: #e8f5e9;
+	border-left: solid 7px #4caf50;
 }
 .chakra5{
-	border-left: solid 5px #00bcd4;
-	background-color: #e0f7fa;
+	border-left: solid 7px #00bcd4;
 }
 .chakra6{
-	border-left: solid 5px #3f51b5;
-	background-color: #e8eaf6;
+	border-left: solid 7px #3f51b5;
 }
 .chakra7{
-	border-left: solid 5px #9c27b0;
+	border-left: solid 7px #9c27b0;
+}
+/*
+.chakra1:hover{
+	background-color: #ffebee;
+}
+.chakra2:hover{
+	background-color: #fff3e0;
+}
+.chakra3:hover{
+	background-color: #fff8e1;
+}
+.chakra4:hover{
+	background-color: #e8f5e9;
+}
+.chakra5:hover{
+	background-color: #e0f7fa;
+}
+.chakra6:hover{
+	background-color: #e8eaf6;
+}
+.chakra7:hover{
 	background-color: #f3e5f5;
 }
+*/
