--- a/demo.css
+++ b/demo.css
@@ -1,25 +1,23 @@
 
 body{
-	font-family: Arial, Helvetica, sans-serif;
-	margin: 20px;
-    min-height: 1250px;
-
-  color: black;
-  background-color: white; 
-  background-image: url("bg.gif");
+	font-family: 'Roboto',arial;
+	min-height: 1250px;
+	margin: 0;
+	padding: 20px 20px 20px 30px;
+	color: black;
+	background-color: white; 
 }
+
 h1{
 	margin-bottom: 40px;
 }
 a {
-  text-decoration: none;
-  background-color: rgba(187,239,253,0.3);
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-  color: #1a1a1a;
+	text-decoration: none;
+    color: #259DCB;
 }
 a:hover {
-  background-color: #bbeffd;
-  border-bottom-color: #1a1a1a;
+	text-decoration: underline;
+	color: navy;
 }
 
 #opts{
@@ -27,54 +25,37 @@ a:hover {
 	top: 10px;
 	right: 20px;
 	background-color: white;
+	color: grey;
 }
 #opts > div{
 	padding:5px;
 }
 
-/* gemstones */
 .chakra1{
-	border-left: solid 7px #f44336;
+	background-color: #ffebee;
+	border: solid 2px #f44336;
 }
 .chakra2{
-	border-left: solid 7px #ff9800;
+	background-color: #fff3e0;
+	border: solid 2px #ff9800;
 }
 .chakra3{
-	border-left: solid 7px #ffc107;
+	background-color: #fff8e1;
+	border: solid 2px #ffc107;
 }
 .chakra4{
-	border-left: solid 7px #4caf50;
+	background-color: #e8f5e9;
+	border: solid 2px #4caf50;
 }
 .chakra5{
-	border-left: solid 7px #00bcd4;
+	background-color: #e0f7fa;
+	border: solid 2px #00bcd4;
 }
 .chakra6{
-	border-left: solid 7px #3f51b5;
+	background-color: #e8eaf6;
+	border: solid 2px #3f51b5;
 }
 .chakra7{
-	border-left: solid 7px #9c27b0;
-}
-/*
-.chakra1:hover{
-	background-color: #ffebee;
-}
-.chakra2:hover{
-	background-color: #fff3e0;
-}
-.chakra3:hover{
-	background-color: #fff8e1;
-}
-.chakra4:hover{
-	background-color: #e8f5e9;
-}
-.chakra5:hover{
-	background-color: #e0f7fa;
-}
-.chakra6:hover{
-	background-color: #e8eaf6;
-}
-.chakra7:hover{
 	background-color: #f3e5f5;
+	border: solid 2px #9c27b0;
 }
-*/
-
