--- a/css/demo.css
+++ b/css/demo.css
@@ -1,12 +1,11 @@
-
-body{
-	font-family: 'Roboto',arial;
-	margin: 0;
-	padding: 20px 20px 20px 50px;
-	color: #0f0f0f;
-	background-color: white;
-  	background-image: url("bg0.gif");
-    background-repeat: repeat-y;
+body {
+  font-family: "Roboto", arial;
+  margin: 0;
+  padding: 20px 20px 20px 50px;
+  color: #0f0f0f;
+  background-color: white;
+  background-image: url("bg0.gif");
+  background-repeat: repeat-y;
 }
 
 h1 {
